--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "boilerplate-react-webpack",
   "version": "0.1.1",
+  "engines": {
+    "node": "8.12.0"
+  },
   "description": "A webpack React starter",
   "repository": "https://github.com/dev-academy-challenges/boilerplate-react-webpack.git",
   "main": "server/index.js",
